--- a/css/common.scss
+++ b/css/common.scss
@@ -31,7 +31,7 @@ div.dt-button-info {
 	margin-left: -200px;
 	background-color: white;
 	border-radius: 0.75em;
-	box-shadow: 0 12px 30px rgba(0, 0, 0, 0.6);
+	box-shadow: 3px 4px 10px 1px rgba(0, 0, 0, 0.8);
 	text-align: center;
 	z-index: 2003;
 	overflow: hidden;
